# OSSE-Core

./: .gitignore  CMakeLists.txt  Config.cmake.in  README.md
.config/: tags.list
.configs/: default.osse
.test/: main.cpp
headers/: core.h
headers/HTML/: HTML.h
headers/URI/: URI.h
headers/algorithm/: Algorithm.h
headers/colors/: colors.h
headers/config/: Config.h  Defaults.h
headers/crawler/: Manager.h
headers/crawler/worker/: Worker.h
headers/crawler/worker/simple/: SimpleWorker.h
headers/database/: Database.h
headers/database/simple/: SimpleDatabase.h
headers/error/: Error.h
headers/queue/: Queue.h
headers/robots/: Robots.h
headers/types/: Types.h
src/: core.cpp
src/HTML/: HTML.cpp
src/URI/: URI.cpp
src/algorithm/: Algorithm.cpp
src/config/: Config.cpp  Defaults.cpp
src/crawler/: Manager.cpp
src/crawler/worker/: Worker.cpp
src/crawler/worker/simple/: SimpleWorker.cpp
src/database/: Database.cpp
src/database/simple/: SimpleDatabase.cpp
src/error/: Error.cpp
src/queue/: Queue.cpp
src/robots/: Robots.cpp
